Fixed border, wrapped h1 and div in a header element

--- a/style.css
+++ b/style.css
@@ -1,11 +1,33 @@
 body {
-    background-color: blue;
     text-align: center;
-    font-family: "Papyrus";
 }
 
-.button-2 {
-    margin: 0 auto;
+#to-do-box {
     display: inline-block;
+    position: relative;
+    border: 4px solid black;
+    width: 50%;
+    border-radius: 100px;
+    margin-top: 30px;
+    padding: 50px;
+}
+
+#top-half {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+h1 {
+    font-size: 60px;
+}
+
+input[type="text"] {
+    font-size: 20px;
     text-align: center;
+}
+
+button {
+    font-size: 16px;
 }
